# binance_trader

./: backtest_BTCUSDT_1m.csv
binance_trader_pro/: MANIFEST.in  MIGRATION_REPORT.json  README.md  pyproject.toml
binance_trader_pro/binance_trader/: cli.py  run_backtest.py  run_live.py
binance_trader_pro/binance_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
binance_trader_pro/binance_trader/backtest/: engine.py
binance_trader_pro/binance_trader/config/: .env  settings.yaml
binance_trader_pro/binance_trader/core/: logger.py  types.py  utils.py
binance_trader_pro/binance_trader/data/: fetch.py
binance_trader_pro/binance_trader/exchange/: binance_http.py  binance_ws.py
binance_trader_pro/binance_trader/execution/: execution_engine.py
binance_trader_pro/binance_trader/portfolio/: account.py
binance_trader_pro/binance_trader/risk/: risk_manager.py
binance_trader_pro/binance_trader/runner/: live_ws_runner.py
binance_trader_pro/binance_trader/strategy/: base.py  registry.py  sma_cross.py
binance_trader_pro/binance_trader/tools/: convert_freqtrade.py
binance_trader_pro/integrations/freqtrade/: .env  DockerFile  README.md
binance_trader_pro/integrations/freqtrade/scripts/: run_freqtrade.sh
binance_trader_pro/integrations/freqtrade/user_data/: config_mainnet_live_small.json
binance_trader_pro/integrations/freqtrade/user_data/strategies/: mean_reversion.py
data/: BTCUSDT_1m.csv
freqtrade_package/: .env.example  README.md
freqtrade_package/phase0/: README.md
freqtrade_package/phase1/: README.md
(+16 files in other folders)
